[package]
name = "cheese-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
indicatif = "0.17.3"
once_cell = "1.17.0"
reqwest = {version = "0.11.14", features = ["json", "default-tls"], default-features = false}
rustop = "1.1.2"
scraper = "0.14.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
tokio = {version = "1.25.0", features = ["full", "time", "macros"]}
tokio-retry = "0.3.0"
