[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = {version="1.0.152", features =["derive"]}
cheese-scraper = {path = "../cheese-scraper"}
serde_json = "1.0.93"
